--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -22,6 +22,9 @@
   "account_details": {
     "message": "Detalles de la cuenta"
   },
+  "active": {
+    "message": "Activo"
+  },
   "ad_blocking": {
     "message": "Bloqueador de anuncios"
   },
@@ -50,6 +53,9 @@
   "advertising": {
     "message": "Publicidad",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "Todos los sitios web con estado de protección ajustado se mostrarán aquí."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Permitir Ghostery en ventanas privadas"
@@ -111,9 +117,6 @@
   "cdn": {
     "message": "CDN",
     "description": "Tracker category name"
-  },
-  "clear_all": {
-    "message": "Limpiar todo"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Haz clic en el icono con forma de puzle que está junto a la barra de búsqueda y ancla Ghostery a la barra de herramientas."
@@ -222,6 +225,9 @@
   "essential": {
     "message": "Esencial",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Excepciones"
   },
   "expand": {
     "message": "Expandir"
@@ -376,6 +382,9 @@
   "my_account": {
     "message": "Mi cuenta"
   },
+  "name": {
+    "message": "Nombre"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Navega a un sitio web para ver Ghostery en acción."
   },
@@ -384,6 +393,9 @@
   },
   "no_activities_detected": {
     "message": "No se detectaron actividades"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "No se han añadido excepciones de protección todavía."
   },
   "no_websites_exceptions_added_yet": {
     "message": "No se ha añadido aún ninguna excepción"
@@ -452,6 +464,9 @@
   "privacy_protection": {
     "message": "Protección de la privacidad"
   },
+  "protection_exceptions": {
+    "message": "Excepciones de protección"
+  },
   "protection_status": {
     "message": "Estado de protección"
   },
@@ -491,9 +506,6 @@
   "set_blocking_preference": {
     "message": "Establecer preferencia de bloqueo"
   },
-  "settings": {
-    "message": "Ajustes"
-  },
   "settings_sync": {
     "message": "Sincronizar configuración"
   },
@@ -510,7 +522,7 @@
     "message": "Conectarse"
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "Inicia sesión o crea una cuenta en ghostery.com"
   },
   "simple_view": {
     "message": "Vista sencilla"
@@ -625,9 +637,6 @@
   },
   "what_s_next_": {
     "message": "¿Qué es lo siguiente?"
-  },
-  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "Si pausas Ghostery en algunos sitios web concretos, esos sitios aparecerán aquí."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, operado por Ghostery, es una parte integral de la tecnología anti-seguimiento de Ghostery. Es un recurso global completo sobre rastreadores, que aporta transparencia al rastreo web."
