--- a/extension-manifest-v3/src/_locales/it/messages.json
+++ b/extension-manifest-v3/src/_locales/it/messages.json
@@ -22,6 +22,9 @@
   "account_details": {
     "message": "Dettagli dell’account"
   },
+  "active": {
+    "message": "Attivo"
+  },
   "ad_blocking": {
     "message": "Blocco pubblicità"
   },
@@ -50,6 +53,9 @@
   "advertising": {
     "message": "Pubblicità",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "Tutti i siti web con stato di protezione regolato saranno elencati qui."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Consenti Ghostery nelle finestre private"
@@ -111,9 +117,6 @@
   "cdn": {
     "message": "CDN",
     "description": "Tracker category name"
-  },
-  "clear_all": {
-    "message": "Cancella tutto"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Cliccare sull’icona del puzzle accanto alla barra di ricerca e blocca Ghostery nella barra degli strumenti."
@@ -222,6 +225,9 @@
   "essential": {
     "message": "Essenziali",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Eccezioni"
   },
   "expand": {
     "message": "Espandi"
@@ -376,6 +382,9 @@
   "my_account": {
     "message": "Il Mio Account"
   },
+  "name": {
+    "message": "Nome"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Visita un sito web e scopri Ghostery in azione."
   },
@@ -384,6 +393,9 @@
   },
   "no_activities_detected": {
     "message": "Nessuna attività rilevata"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "Nessuna eccezione di protezione aggiunta ancora"
   },
   "no_websites_exceptions_added_yet": {
     "message": "Nessuna eccezione ai siti web è stata ancora aggiunta"
@@ -452,6 +464,9 @@
   "privacy_protection": {
     "message": "Protezione della privacy"
   },
+  "protection_exceptions": {
+    "message": "Eccezioni di protezione"
+  },
   "protection_status": {
     "message": "Stato di protezione"
   },
@@ -491,9 +506,6 @@
   "set_blocking_preference": {
     "message": "Imposta preferenza di blocco"
   },
-  "settings": {
-    "message": "Impostazioni"
-  },
   "settings_sync": {
     "message": "Sincronizzazione delle impostazioni"
   },
@@ -510,7 +522,7 @@
     "message": "Accedi"
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "Accedi o crea un account su ghostery.com"
   },
   "simple_view": {
     "message": "Vista Semplice"
@@ -625,9 +637,6 @@
   },
   "what_s_next_": {
     "message": "Come procedere?"
-  },
-  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "Mettendo in pausa Ghostery nei singoli siti web, tali siti appariranno qui."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, gestito da Ghostery, è parte integrante della tecnologia anti-tracciamento AI di Ghostery. Si tratta di una risorsa globale completa sui tracker, che porta trasparenza al tracciamento sul web."
