--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -22,6 +22,9 @@
   "account_details": {
     "message": "アカウント詳細"
   },
+  "active": {
+    "message": "アクティブ"
+  },
   "ad_blocking": {
     "message": "広告ブロッキング"
   },
@@ -50,6 +53,9 @@
   "advertising": {
     "message": "広告",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "すべての調整済み保護ステータスのウェブサイトがここにリストされます。"
   },
   "allow_ghostery_in_private_windows": {
     "message": "プライベートウィンドウでGhosteryを許可する"
@@ -111,9 +117,6 @@
   "cdn": {
     "message": "CDN",
     "description": "Tracker category name"
-  },
-  "clear_all": {
-    "message": "すべてクリア"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "検索バーの横にあるパズルのアイコンをクリックし、Ghosteryをツールバーに固定します。"
@@ -222,6 +225,9 @@
   "essential": {
     "message": "必需",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "例外"
   },
   "expand": {
     "message": "展開"
@@ -376,6 +382,9 @@
   "my_account": {
     "message": "アカウント"
   },
+  "name": {
+    "message": "名前"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "ホームページにアクセスして、Ghosteryの動作を確認しましょう。"
   },
@@ -384,6 +393,9 @@
   },
   "no_activities_detected": {
     "message": "アクティビティは検出されませんでした"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "まだ保護例外は追加されていません"
   },
   "no_websites_exceptions_added_yet": {
     "message": "ウェブサイトの例外はまだ追加されていません"
@@ -452,6 +464,9 @@
   "privacy_protection": {
     "message": "プライバシー保護"
   },
+  "protection_exceptions": {
+    "message": "保護の例外"
+  },
   "protection_status": {
     "message": "保護ステータス"
   },
@@ -491,9 +506,6 @@
   "set_blocking_preference": {
     "message": "ブロック設定に進む"
   },
-  "settings": {
-    "message": "設定"
-  },
   "settings_sync": {
     "message": "同期設定"
   },
@@ -510,7 +522,7 @@
     "message": "サインイン"
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "ghostery.com でログインまたはアカウントを作成してください。"
   },
   "simple_view": {
     "message": "シンプル・ビュー"
@@ -625,9 +637,6 @@
   },
   "what_s_next_": {
     "message": "次は何をするのでしょうか？"
-  },
-  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "個々のウェブサイトでGhosteryを一時停止すると、そのウェブサイトがここに表示されます。"
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghosteryが運営するWhoTracks.Meは、GhosteryのAIアンチトラッキング技術に統合されている要素です。 トラッカーに関する最も包括的なグローバルリソースで、Webトラッキングに透明性をもたらしています。"
