--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -22,6 +22,9 @@
   "account_details": {
     "message": "계정 세부정보"
   },
+  "active": {
+    "message": "사용"
+  },
   "ad_blocking": {
     "message": "광고 차단"
   },
@@ -50,6 +53,9 @@
   "advertising": {
     "message": "광고 ",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "모든 보호 상태가 조정된 웹사이트는 여기에 나열됩니다."
   },
   "allow_ghostery_in_private_windows": {
     "message": "비공개 창에서 고스트리밍 허용"
@@ -111,9 +117,6 @@
   "cdn": {
     "message": "CDN",
     "description": "Tracker category name"
-  },
-  "clear_all": {
-    "message": "모두 지우기"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "검색 바 옆 퍼즐 아이콘을 클릭하면 Ghostery가 툴바에 고정됩니다."
@@ -222,6 +225,9 @@
   "essential": {
     "message": "필수 ",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "예외"
   },
   "expand": {
     "message": "펼치기"
@@ -376,6 +382,9 @@
   "my_account": {
     "message": "내 계정 "
   },
+  "name": {
+    "message": "이름 "
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "웹사이트로 이동하여 Ghostery가 어떻게 작동하는지 살펴보세요."
   },
@@ -384,6 +393,9 @@
   },
   "no_activities_detected": {
     "message": "감지된 활동 없음"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "아직 보호 예외가 추가되지 않았습니다."
   },
   "no_websites_exceptions_added_yet": {
     "message": "아직 추가된 웹사이트 예외 없음"
@@ -452,6 +464,9 @@
   "privacy_protection": {
     "message": "개인정보 보호"
   },
+  "protection_exceptions": {
+    "message": "보호 예외사항"
+  },
   "protection_status": {
     "message": "보호 상태"
   },
@@ -491,9 +506,6 @@
   "set_blocking_preference": {
     "message": "차단 맞춤 설정"
   },
-  "settings": {
-    "message": "설정 "
-  },
   "settings_sync": {
     "message": "설정 동기화"
   },
@@ -510,7 +522,7 @@
     "message": "로그인 "
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "ghostery.com에 로그인하거나 계정을 만드세요."
   },
   "simple_view": {
     "message": "간단히 보기 "
@@ -625,9 +637,6 @@
   },
   "what_s_next_": {
     "message": "다음 업데이트"
-  },
-  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "개별 웹사이트에서 Ghostery를 일시 중지하면 해당 웹사이트가 여기 표시됩니다."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghostery가 운영하는 WhoTracks.Me는 Ghostery의 AI 추적 방지 기술을 필수 부분으로 작동합니다. 이는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
