--- a/extension-manifest-v3/src/_locales/pt_BR/messages.json
+++ b/extension-manifest-v3/src/_locales/pt_BR/messages.json
@@ -22,6 +22,9 @@
   "account_details": {
     "message": "Detalhes da conta"
   },
+  "active": {
+    "message": "Ativo"
+  },
   "ad_blocking": {
     "message": "Bloqueio de anúncios"
   },
@@ -50,6 +53,9 @@
   "advertising": {
     "message": "Anúncio",
     "description": "Tracker category name"
+  },
+  "all_websites_with_adjusted_protection_status_will_be_listed_here_": {
+    "message": "Todos os sites com status de proteção ajustado serão listados aqui."
   },
   "allow_ghostery_in_private_windows": {
     "message": "Permitir o Ghostery em janelas privadas"
@@ -111,9 +117,6 @@
   "cdn": {
     "message": "CDN",
     "description": "Tracker category name"
-  },
-  "clear_all": {
-    "message": "Limpar tudo"
   },
   "click_the_puzzle_icon_next_to_the_search_bar_and_pin_ghostery_to_your_toolbar_": {
     "message": "Clique no ícone do quebra-cabeça ao lado da barra de pesquisa e fixe o Ghostery na sua barra de ferramentas."
@@ -222,6 +225,9 @@
   "essential": {
     "message": "Essencial",
     "description": "Tracker category name"
+  },
+  "exceptions": {
+    "message": "Exceções"
   },
   "expand": {
     "message": "Expandir"
@@ -376,6 +382,9 @@
   "my_account": {
     "message": "Minha conta"
   },
+  "name": {
+    "message": "Nome"
+  },
   "navigate_to_a_website_to_see_ghostery_in_action_": {
     "message": "Navegue até um site para ver o Ghostery em ação."
   },
@@ -384,6 +393,9 @@
   },
   "no_activities_detected": {
     "message": "Nenhuma atividade detectada"
+  },
+  "no_protection_exceptions_added_yet": {
+    "message": "Nenhuma exceção de proteção adicionada ainda."
   },
   "no_websites_exceptions_added_yet": {
     "message": "Nenhuma exceção de site adicionada ainda"
@@ -452,6 +464,9 @@
   "privacy_protection": {
     "message": "Proteção de privacidade"
   },
+  "protection_exceptions": {
+    "message": "Exceções de proteção"
+  },
   "protection_status": {
     "message": "Status de proteção"
   },
@@ -491,9 +506,6 @@
   "set_blocking_preference": {
     "message": "Definir preferência de bloqueio"
   },
-  "settings": {
-    "message": "Configurações"
-  },
   "settings_sync": {
     "message": "Configurações de sincronização"
   },
@@ -510,7 +522,7 @@
     "message": "Entrar"
   },
   "sign_in_or_create_account_on_ghostery_com": {
-    "message": "Sign in or create account on ghostery.com"
+    "message": "Faça login ou crie uma conta em ghostery.com"
   },
   "simple_view": {
     "message": "Visão simples"
@@ -625,9 +637,6 @@
   },
   "what_s_next_": {
     "message": "O que vem a seguir?"
-  },
-  "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
-    "message": "Ao pausar o Ghostery em sites individuais, esses sites aparecerão aqui."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "O WhoTracks.Me, operado pela Ghostery, é parte integrante da tecnologia antirastreamento de IA da Ghostery. É um recurso global abrangente sobre rastreadores que traz transparência ao rastreamento na web."
