--- a/extension-manifest-v3/src/_locales/de/messages.json
+++ b/extension-manifest-v3/src/_locales/de/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "Werde Ghostery-Förderer"
   },
+  "block_all": {
+    "message": "Block all"
+  },
   "block_all__recommended_": {
     "message": "Alle blockieren (empfohlen)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "Weniger anzeigen"
+  },
+  "coming_soon": {
+    "message": "coming soon"
   },
   "comments": {
     "message": "Kommentare",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "Datenschutz"
   },
+  "protection": {
+    "message": "protection"
+  },
   "protection_exceptions": {
     "message": "Schutzausnahmen"
   },
@@ -531,6 +540,9 @@
     "message": "Website-Analytics",
     "description": "Tracker category name"
   },
+  "site_is_trusted": {
+    "message": "Site is trusted"
+  },
   "social_media": {
     "message": "Social Media",
     "description": "Tracker category name"
@@ -580,6 +592,9 @@
   },
   "trust_on_this_website": {
     "message": "Auf dieser Website vertrauen"
+  },
+  "trust_this_site": {
+    "message": "Trust this site"
   },
   "trusted": {
     "message": "Vertrauenswürdig"
