--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "Conviértete en Contribuyente"
   },
+  "block_all": {
+    "message": "Block all"
+  },
   "block_all__recommended_": {
     "message": "Bloquear todo (recomendado)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "Contraer"
+  },
+  "coming_soon": {
+    "message": "coming soon"
   },
   "comments": {
     "message": "Comentarios",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "Protección de la privacidad"
   },
+  "protection": {
+    "message": "protection"
+  },
   "protection_exceptions": {
     "message": "Excepciones de protección"
   },
@@ -531,6 +540,9 @@
     "message": "Estadísticas de sitios",
     "description": "Tracker category name"
   },
+  "site_is_trusted": {
+    "message": "Site is trusted"
+  },
   "social_media": {
     "message": "Redes sociales",
     "description": "Tracker category name"
@@ -580,6 +592,9 @@
   },
   "trust_on_this_website": {
     "message": "Confiar en este sitio web"
+  },
+  "trust_this_site": {
+    "message": "Trust this site"
   },
   "trusted": {
     "message": "De confianza"
