--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "Devenez donateur"
   },
+  "block_all": {
+    "message": "Block all"
+  },
   "block_all__recommended_": {
     "message": "Tout bloquer (recommandé)"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "Réduire"
+  },
+  "coming_soon": {
+    "message": "coming soon"
   },
   "comments": {
     "message": "Commentaires",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "Protection de la vie privée"
   },
+  "protection": {
+    "message": "protection"
+  },
   "protection_exceptions": {
     "message": "Exceptions de protection"
   },
@@ -531,6 +540,9 @@
     "message": "Outils d'analyse de sites web",
     "description": "Tracker category name"
   },
+  "site_is_trusted": {
+    "message": "Site is trusted"
+  },
   "social_media": {
     "message": "Réseaux sociaux",
     "description": "Tracker category name"
@@ -580,6 +592,9 @@
   },
   "trust_on_this_website": {
     "message": "Autoriser sur ce site web"
+  },
+  "trust_this_site": {
+    "message": "Trust this site"
   },
   "trusted": {
     "message": "Autorisé"
