--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -85,6 +85,9 @@
   "become_a_contributor": {
     "message": "成為捐助者"
   },
+  "block_all": {
+    "message": "Block all"
+  },
   "block_all__recommended_": {
     "message": "阻止所有（推薦）"
   },
@@ -123,6 +126,9 @@
   },
   "collapse": {
     "message": "折疊"
+  },
+  "coming_soon": {
+    "message": "coming soon"
   },
   "comments": {
     "message": "評論",
@@ -464,6 +470,9 @@
   "privacy_protection": {
     "message": "隱私權保護"
   },
+  "protection": {
+    "message": "protection"
+  },
   "protection_exceptions": {
     "message": "保護的例外情況"
   },
@@ -531,6 +540,9 @@
     "message": "網站分析",
     "description": "Tracker category name"
   },
+  "site_is_trusted": {
+    "message": "Site is trusted"
+  },
   "social_media": {
     "message": "社交媒體",
     "description": "Tracker category name"
@@ -580,6 +592,9 @@
   },
   "trust_on_this_website": {
     "message": "信任此網站"
+  },
+  "trust_this_site": {
+    "message": "Trust this site"
   },
   "trusted": {
     "message": "已信任"
